--- a/index.qmd
+++ b/index.qmd
@@ -17,8 +17,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!gen-ai-framework.qmd"
-    - "!xmas-cards.qmd"
+    - "!llms-whitepaper-response.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -68,10 +67,10 @@ listing:
     contents: 
     - /viewpoints
     - "!index.qmd"
-    - "!posit-conf-video.qmd"
     - "!census-bureau.qmd"
     - "!cherry-blossom.qmd"
     - "!gen-ai-framework.qmd"
+    - "!llms-whitepaper-response.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -133,15 +132,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/editors-blog/posts/2024/01/22/gen-ai-framework.html">
+<a href="/viewpoints/editors-blog/posts/2024/02/08/llms-whitepaper-response.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## UK government sets out 10 principles for use of generative AI
-Government says staff need to understand what generative AI is, its limitations, how to monitor and mitigate "generative AI drift, bias and hallucinations" and to have "a robust testing and monitoring process in place to catch these problems."    
+## £10m for UK regulators to 'jumpstart' AI capabilities, as government commits to white paper approach
+It's been a busy seven days for AI news in the UK as two major government reports were published, millions of pounds of new investments were announced, and warnings rang out of the risk of 'regulatory capture.' Here are some key takeaways.    
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/editors-blog/posts/2024/01/22/images/uk-parliament.png)
+![](viewpoints/editors-blog/posts/2024/02/08/images/parliament-and-thames.png)
 :::
 :::
 
