--- a/viewpoints/editors-blog/posts/2024/02/08/llms-whitepaper-response.qmd
+++ b/viewpoints/editors-blog/posts/2024/02/08/llms-whitepaper-response.qmd
@@ -34,7 +34,7 @@ central support teams is needed."
 
 "Relying on existing regulators to ensure good outcomes from AI will only work if they are properly resourced and empowered," the committee said. 
 
-The £10 million funding for regulators announced this week is therefore likely to be welcomed. Money is earmarked to "help regulators develop cutting-edge research and practical tools to monitor and address risks and opportunities in their sectors, from telecoms and healthcare to finance and education," according to [a DSIT press release](https://www.gov.uk/government/news/uk-signals-step-change-for-regulators-to-strengthen-ai-leadership). [Speaking on February 6 at a hearing of the Lords Communications and Digital Committee](https://parliamentlive.tv/event/index/68ecee17-2896-4002-8736-1608229db364?in=15:27:41), Michelle Donelan, Secretary of State for Science, Innovation and Technology, said that the government would "stay on top" of what regulators need to be able to fulfil their responsibilities for regulating the use of AI in their sectors.
+The £10 million funding for regulators announced this week is therefore likely to be welcomed. Money is earmarked to "help regulators develop cutting-edge research and practical tools to monitor and address risks and opportunities in their sectors, from telecoms and healthcare to finance and education," according to [a DSIT press release](https://www.gov.uk/government/news/uk-signals-step-change-for-regulators-to-strengthen-ai-leadership). Speaking on February 6 at [a hearing of the Lords Communications and Digital Committee](https://parliamentlive.tv/event/index/68ecee17-2896-4002-8736-1608229db364?in=15:27:41), Michelle Donelan, Secretary of State for Science, Innovation and Technology, said that the government would "stay on top" of what regulators need to be able to fulfil their responsibilities for regulating the use of AI in their sectors.
 
 ## Consultation response
 
@@ -48,14 +48,13 @@ As a next step in delivering on the white paper approach, the government is aski
 
 > "Urgency is certainly warranted, and the directive for key regulators to disclose their approach in the coming months is a positive development. Ensuring consistency and coherence not only among key regulators but also those who follow is crucial."
 
-Garrett also [reiterated the need for government to engage with statisticians and data scientists](https://realworlddatascience.net/viewpoints/interviews/posts/2023/10/25/evaluating-ai.html), particularly through its [new AI Safety Institute](https://realworlddatascience.net/viewpoints/posts/2023/12/06/ai-fringe.html) (AISI). In the white paper consultation response, AISI is billed as being "fundamental to informing the UK's regulatory framework": it will "advance the world's knowledge of AI safety by carefully examining, evaluating, and testing new frontier AI systems" and "research new techniques for understanding and mitigating AI risk." Garrett said:
+Garrett also [reiterated the need for government to engage with statisticians and data scientists](https://realworlddatascience.net/viewpoints/interviews/posts/2023/10/25/evaluating-ai.html), particularly through its [new AI Safety Institute](https://realworlddatascience.net/viewpoints/posts/2023/12/06/ai-fringe.html) (AISI). In the white paper consultation response, AISI is billed as being "fundamental to informing the UK's regulatory framework": it will "advance the world's knowledge of AI safety by carefully examining, evaluating, and testing new frontier AI systems" and will also "research new techniques for understanding and mitigating AI risk." Garrett said:
 
 > "As always, fostering diversity of representation within government and regulatory bodies remains paramount; it cannot solely rely on input from major tech companies. It is especially important that the AI Safety Institute engages with a diverse array of voices, including statisticians and data scientists who play a pivotal role in both the development of AI systems and novel evaluation methodologies."
 
 ## Risks and opportunities
 
-Calls for a "diversity of representation within government and regulatory bodies" certainly chime with a warning bell sounded by the Lords Communications and Digital Committee last week, in the February 2 release of its [inquiry report into large language models and generative AI](https://committees.parliament.uk/committee/170/communications-and-digital-committee/news/199728/uk-will-miss-ai-goldrush-unless-government-adopts-a-more-positive-vision/). "Regulatory capture" by big commercial interests was highlighted as a danger to be avoided, amid concern that "the AI safety debate is being dominated by views narrowly focused on catastrophic risk, often coming from those who developed such models in the first place"[^1] and that "this distracts from
-more immediate issues like copyright infringement, bias and reliability."
+Calls for a "diversity of representation within government and regulatory bodies" certainly chime with a warning bell sounded by the Lords Communications and Digital Committee last week, in the February 2 release of its [inquiry report into large language models and generative AI](https://committees.parliament.uk/committee/170/communications-and-digital-committee/news/199728/uk-will-miss-ai-goldrush-unless-government-adopts-a-more-positive-vision/). "Regulatory capture" by big commercial interests was highlighted as a danger to be avoided, amid concern that "the AI safety debate is being dominated by views narrowly focused on catastrophic risk, often coming from those who developed such models in the first place" and that "this distracts from more immediate issues like copyright infringement, bias and reliability."[^1]
 
 [^1]: See, for example, ["No, AI probably won’t kill us all – and there’s more to this fear campaign than meets the eye."](https://realworlddatascience.net/viewpoints/posts/2023/06/05/no-AI-probably-wont-kill-us.html)
 
