added info on Google Fonts

--- a/ts-and-cs.qmd
+++ b/ts-and-cs.qmd
@@ -58,6 +58,8 @@ Real World Data Science is hosted by [GitHub Pages](https://pages.github.com/).
 
 This site uses [Google Analytics 4](https://support.google.com/analytics/answer/10089681?hl=en) for web analytics reporting.
 
+Fonts used on this site are served by the Google Fonts API. This is to improve site loading speeds and font compatibility across devices. Review the [Google Fonts Privacy and Data Collection statement](https://developers.google.com/fonts/faq/privacy).
+
 User comments and reaction functionality is provided by [giscus](https://giscus.app/), a comments system powered by [GitHub Discussions](https://docs.github.com/en/discussions). Use of this comment functionality is governed by the [Contributor Covenant Code of Conduct](#contributor-covenant-code-of-conduct).
 
 ## Notice and Takedown policy
