--- a/index.qmd
+++ b/index.qmd
@@ -17,7 +17,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!llms-whitepaper-response.qmd"
+    - "!what-is-data-science.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -43,6 +43,7 @@ listing:
     - /ideas
     - "!index.qmd"
     - "!dsb-live.qmd"
+    - "!what-is-data-science.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -67,7 +68,6 @@ listing:
     contents: 
     - /viewpoints
     - "!index.qmd"
-    - "!census-bureau.qmd"
     - "!cherry-blossom.qmd"
     - "!gen-ai-framework.qmd"
     - "!llms-whitepaper-response.qmd"
@@ -132,15 +132,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/editors-blog/posts/2024/02/08/llms-whitepaper-response.qmd">
+<a href="/ideas/posts/2024/02/19/what-is-data-science.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## £10m for UK regulators to 'jumpstart' AI capabilities, as government commits to white paper approach
-It's been a busy seven days for AI news in the UK as two major government reports were published, millions of pounds of new investments were announced, and warnings rang out of the risk of 'regulatory capture.' Here are some key takeaways.    
+## What is data science? A closer look at science’s latest priority dispute
+Two popular data science algorithms -- naïve Bayes and eigen centrality -- are used to examine the difference between 'data scientists' and 'statisticians,' and to see where each role sits in the network of other occupations.    
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/editors-blog/posts/2024/02/08/images/parliament-and-thames.png)
+![](ideas/posts/2024/02/19/images/bubbles.png)
 :::
 :::
 
@@ -175,11 +175,11 @@ Welcome to **Real World Data Science**, a new project from the [Royal Statistica
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## We have changed the culture, our techniques, and our data. What we have now are appropriate methodologies to answer appropriate questions. Do we still use qualitative data? A hundred percent, when it is necessary to do so. Do we still use surveys? Yes, we’ve got some of the best surveys in the world. But equally, we also use digital data, administrative data, and we use very modern techniques of analysing those data.
-Professor Sir Ian Diamond, UK national statistician
+## We absolutely have to transform and modernise our operation, and realise the value of taking [survey] information, blending it with existing data, administrative data, even third-party private sector data, into a huge data pool and linking it together -- that will create new data products that will serve the public in ways that we never imagined before.
+Robert Santos, director, US Census Bureau
 
 ::: {.button}
-[Read the interview](viewpoints/interviews/posts/2023/12/15/ian-diamond.qmd)
+[Read the interview](viewpoints/interviews/posts/2024/01/15/census-bureau.qmd)
 :::
 
 :::
@@ -217,11 +217,11 @@ Professor Sir Ian Diamond, UK national statistician
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## Data duplication is a ubiquitous problem affecting data quality. Organisations often have multiple records that refer to the same entity but no unique identifier that ties these entities together. Data entry errors and other issues mean that variations usually exist, so the records belonging to a single entity aren’t necessarily identical.
-Robin Linacre describes the problem that inspired 'Splink'
+## We have changed the culture, our techniques, and our data. What we have now are appropriate methodologies to answer appropriate questions. Do we still use qualitative data? A hundred percent, when it is necessary to do so. Do we still use surveys? Yes, we’ve got some of the best surveys in the world. But equally, we also use digital data, administrative data, and we use very modern techniques of analysing those data.
+Professor Sir Ian Diamond, UK national statistician
 
 ::: {.button}
-[Read the case study](case-studies/posts/2023/11/22/splink.html)
+[Read the interview](viewpoints/interviews/posts/2023/12/15/ian-diamond.qmd)
 :::
 
 :::
